--- a/templates/admin/content/richtext/init_ckeditor_custom.html
+++ b/templates/admin/content/richtext/init_ckeditor_custom.html
@@ -4,7 +4,7 @@
 {{ block.super }}
 $(function() {
     $('#id_excerpt').each(function() {
-      CKEDITOR.replace(this.id, config);
+      CKEDITOR.replace(this.id, CKEDITOR.config);
     });
 });
 {% endblock %}
